<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">GDAADemo</string>
  <string name="disp_text">
      \n\n
      1/ UPLOAD (upload icon) uploads a text file to Google Drive, creating a simple tree
         directory structure in the process.\n
         The createTree() method allows for testing of different CRUD primitives (search,
         create folder, etc…) in the process.\n\n
      2/ DOWNLOAD (download icon) scans the tree created by the createTree() method. If the
         object is a file, it\'s metadata is updated (description field), the content is
         downloaded.\n\n
      3/ DELETE (X - delete icon) scans the tree created by the createTree() method and deletes
         all the files and folders in the process\n
    </string>

  <!-- menu -->
  <string name="action_scan">UPLOAD file</string>
  <string name="action_list">DOWNLOAD all files</string>
  <string name="action_delete">DELETE all files</string>
  <string name="action_cre_act">CREATE activity</string>
  <string name="action_pick_act">PICK activity</string>
  <string name="action_account">Select Google Account…</string>

  <string name="err_author">NO GOOGLE DRIVE ACCESS!</string>

</resources>
