<menu
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context=".MainActivity">

      <item android:id="@+id/action_create"
            android:title="@string/action_scan"
            android:orderInCategory="100"
            app:showAsAction="always"
            android:icon="@drawable/ic_action_upload"/>

      <item android:id="@+id/action_list"
            android:title="@string/action_list"
            android:orderInCategory="200"
            app:showAsAction="always"
            android:icon="@drawable/ic_action_download"/>

      <item android:id="@+id/action_delete"
            android:title="@string/action_delete"
            android:orderInCategory="300"
            app:showAsAction="always"
            android:icon="@drawable/ic_action_remove"/>

      <item android:id="@+id/action_cre_act"
            android:title="@string/action_cre_act"
            android:orderInCategory="400"
            app:showAsAction="never"/>

      <item android:id="@+id/action_pick_act"
            android:title="@string/action_pick_act"
            android:orderInCategory="500"
            app:showAsAction="never"/>

      <item android:id="@+id/action_account"
            android:title="@string/action_account"
            app:showAsAction="never"
            android:orderInCategory="999" />

</menu>
